--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "bootstrap": "^4.5.0",
         "bootstrap-vue": "^2.15.0",
+        "locomotive-scroll": "^3.5.4",
         "nuxt": "^2.14.0"
     },
     "devDependencies": {}
