--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
         "generate": "nuxt generate"
     },
     "dependencies": {
+        "@nuxtjs/firebase": "^6.1.1",
         "bootstrap": "^4.5.0",
         "bootstrap-vue": "^2.15.0",
+        "firebase": "^7.19.0",
         "locomotive-scroll": "^3.5.4",
         "nuxt": "^2.14.3",
         "swiper": "^5.4.5",
