--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
         "bootstrap": "^4.5.0",
         "bootstrap-vue": "^2.15.0",
         "firebase": "^7.19.0",
+        "hubspot": "^2.3.13",
         "locomotive-scroll": "^3.5.4",
         "nuxt": "^2.14.3",
         "swiper": "^5.4.5",
         "vue-awesome-swiper": "^4.1.1",
+        "vue-plugin-load-script": "^1.3.2",
         "vue-session": "^1.0.0",
         "vuelidate": "^0.7.5"
     },
