--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "hubspot": "^2.3.13",
         "locomotive-scroll": "^3.5.4",
         "nuxt": "^2.14.3",
+        "nuxt-i18n": "^6.13.12",
         "swiper": "^5.4.5",
         "vue-awesome-swiper": "^4.1.1",
         "vue-plugin-load-script": "^1.3.2",
