--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "swiper": "^5.4.5",
         "vue-awesome-swiper": "^4.1.1",
         "vue-plugin-load-script": "^1.3.2",
-        "vue-quill": "^1.5.1",
+        "vue-popup": "^0.2.14",
         "vue-session": "^1.0.0",
         "vuelidate": "^0.7.5"
     },
