--- a/firebase.json
+++ b/firebase.json
@@ -1,19 +1,23 @@
 {
-  "hosting": {
-    "public": "dist",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
-  },
-  "database": {
-    "rules": "database.rules.json"
-  }
+    "hosting": {
+        "public": "dist",
+        "ignore": [
+            "firebase.json",
+            "**/.*",
+            "**/node_modules/**"
+        ]
+    },
+    "database": {
+        "rules": "database.rules.json"
+    },
+    "functions": {
+        "predeploy": [
+            "npm --prefix \"$RESOURCE_DIR\" run lint"
+        ]
+    },
+    "emulators": {
+        "database": {
+            "port": "9001"
+        }
+    }
 }
