add presenter images

--- a/functions/.env-sample
+++ b/functions/.env-sample
@@ -1,2 +1,1 @@
-MAILCHIMP_API_KEY= YOUR_MAILCHAMP_API_KEY_HERE
-MAILCHIMP_AUDIENCE_ID= YOUR_MAILCHIMP_AUDIENCE_ID_HERE
+firebase functions:config:set mailchimp.key="YOUR_MAILCHAMP_API_KEY_HERE" mailchimp.id="YOUR_MAILCHIMP_AUDIENCE_ID_HERE"
