--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "generate": "nuxt generate"
     },
     "dependencies": {
+        "@chenfengyuan/vue-countdown": "^1.1.5",
         "@nuxtjs/axios": "^5.12.2",
         "@nuxtjs/firebase": "^6.1.1",
         "bootstrap": "^4.5.0",
@@ -20,6 +21,7 @@
         "nuxt": "^2.14.5",
         "nuxt-i18n": "^6.13.12",
         "swiper": "^5.4.5",
+        "vue": "^2.6.12",
         "vue-awesome-swiper": "^4.1.1",
         "vue-plugin-load-script": "^1.3.2",
         "vue-popup": "^0.2.14",
