--- a/functions/package.json
+++ b/functions/package.json
@@ -14,9 +14,11 @@
     },
     "main": "index.js",
     "dependencies": {
+        "babel-runtime": "^6.26.0",
         "cors": "^2.8.5",
         "firebase-admin": "^8.10.0",
         "firebase-functions": "^3.6.1",
+        "hubspot-form-submit": "^1.1.0",
         "mailchimp-api-v3": "^1.14.0"
     },
     "devDependencies": {
