--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,6 +25,12 @@
       "windows": {
         "program": "${workspaceFolder}/node_modules/nuxt/bin/nuxt.js"
       }
+    },
+    {
+      "type": "node",
+      "request": "attach",
+      "name": "Debug",
+      "port": 9229
     }
   ],
   "compounds": [
