--- a/functions/package.json
+++ b/functions/package.json
@@ -7,7 +7,8 @@
         "shell": "firebase functions:shell",
         "start": "npm run shell",
         "deploy": "firebase deploy --only functions",
-        "logs": "firebase functions:log"
+        "logs": "firebase functions:log",
+        "debug": "firebase emulators:start --inspect-functions"
     },
     "engines": {
         "node": "12"
@@ -18,8 +19,8 @@
         "cors": "^2.8.5",
         "firebase-admin": "^8.10.0",
         "firebase-functions": "^3.6.1",
-        "hubspot-form-submit": "^1.1.0",
-        "mailchimp-api-v3": "^1.14.0"
+        "mailchimp-api-v3": "^1.14.0",
+        "xmlhttprequest": "^1.8.0"
     },
     "devDependencies": {
         "eslint": "^5.12.0",
