--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "@nuxtjs/firebase": "^6.1.1",
         "bootstrap": "^4.5.0",
         "bootstrap-vue": "^2.15.0",
-        "firebase": "^7.19.0",
+        "firebase": "^7.23.0",
         "hubspot": "^2.3.13",
         "locomotive-scroll": "^3.5.4",
         "node-fetch": "^2.6.1",
@@ -26,7 +26,10 @@
         "vue-awesome-swiper": "^4.1.1",
         "vue-plugin-load-script": "^1.3.2",
         "vue-popup": "^0.2.14",
+        "vue-reactive-localstorage": "git+https://github.com/HAlex/vue-reactive-localstorage.git",
+        "vue-reactive-storage": "git+https://github.com/ropbla9/vue-reactive-storage.git",
         "vue-session": "^1.0.0",
+        "vue-storage-watcher": "^1.3.3",
         "vuelidate": "^0.7.5"
     },
     "devDependencies": {}
